v10.4.0/_sources/generated/pcdsdevices.lens.SimLensStackBase.rst.txt
pcdsdevices.lens.SimLensStackBase
=================================

.. currentmodule:: pcdsdevices.lens

.. autoclass:: SimLensStackBase

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - x
          - :class:`~pcdsdevices.sim.FastMotor`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    
        * - y
          - :class:`~pcdsdevices.sim.FastMotor`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    
        * - z
          - :class:`~pcdsdevices.sim.FastMotor`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    
        * - calib_z
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    
        * - beam_size
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    

    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: align
    .. automethod:: check_single
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: forward
    .. automethod:: get
    .. automethod:: inverse
    .. automethod:: move
    .. automethod:: move_single
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_current_position
    .. automethod:: set_defaults
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: to_pseudo_tuple
    .. automethod:: to_real_tuple
    .. automethod:: trigger
    .. automethod:: tweak
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: composite_egu
    .. autoattribute:: concurrent
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: pseudo_positioners
    .. autoattribute:: real_position
    .. autoattribute:: real_positioners
    .. autoattribute:: sequential
    .. autoattribute:: settle_time
    .. autoattribute:: subscriptions
    .. autoattribute:: target
    .. autoattribute:: timeout
    
    